# cc-tracker

./: .gitignore  Cargo.toml  USABILITY_ANALYSIS.md  clippy.toml  rustfmt.toml
.claude/: CLAUDE.md  DEVELOPMENT_GUIDELINES.md  settings.local.json
benches/: benchmarks.rs
config/: config.yaml
docs/Prompt Tracking System/: 00-Obsidian-Setup-Guide.md  project-prep-guide.md
docs/Prompt Tracking System/02_Architecture/: 03-System-Architecture.md
docs/Prompt Tracking System/04_References/: 05-External-References.md
docs/initail/: 00-Summary-All-Files.md  01-Overview.md  02-Goals-and-Requirements.md  04-Development-Setup.md  06-Progress-Tracking.md  complete-prep-guide.md
src/cli/: main.rs
src/core/: lib.rs
src/core/analysis/: mod.rs
src/core/cache/: mod.rs
src/core/capture/: mod.rs
src/core/config/: mod.rs
src/core/database/: mod.rs
src/core/filter/: mod.rs
src/core/migration/: mod.rs
src/core/models/: mod.rs
src/core/reporting/: mod.rs
src/core/utils/: mod.rs
src/core/watcher/: mod.rs
tests/: cli_tests.rs  edge_cases.rs  integration_tests.rs
