[package]
name = "prompt_tracking"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Enterprise-grade prompt tracking system for Claude Code"
repository = "https://github.com/YOUR_USERNAME/prompt-tracking-system"
license = "MIT"

[lib]
name = "prompt_tracking"
path = "src/core/lib.rs"

[[bin]]
name = "prompt-tracking"
path = "src/cli/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Database
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# File handling
walkdir = "2.4"
notify = "6.1"

# Hashing
sha2 = "0.10"

# Directory paths
dirs = "5.0"
shellexpand = "3.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
